--- a/src/Exporty/Exporty.csproj
+++ b/src/Exporty/Exporty.csproj
@@ -9,12 +9,13 @@
         <RepositoryUrl>https://github.com/turhany/Exporty</RepositoryUrl>
         <PackageTags>Export, Excel, Csv, Pdf</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="ClosedXML" Version="0.95.4" />
-      <PackageReference Include="CsvHelper" Version="27.2.1" />
-      <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.7.5" />
+      <PackageReference Include="ClosedXML" Version="0.96.0" />
+      <PackageReference Include="CsvHelper" Version="28.0.1" />
+      <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.8.0" />
     </ItemGroup>
 
     <ItemGroup>
